exports[`GeneAutosuggest renders correctly 1`] = `
<div
  className="GenericAutosuggest">
  <div
    className="react-autosuggest__container">
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-gene-autosuggest"
      autoComplete="off"
      className="react-autosuggest__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select a gene"
      role="combobox"
      type="text"
      value="" />
    <div
      className="react-autosuggest__suggestions-container"
      id="react-autowhatever-gene-autosuggest" />
  </div>
</div>
`;

exports[`PartnerAutosuggest renders correctly 1`] = `
<div
  className="GenericAutosuggest">
  <div
    className="react-autosuggest__container">
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-partner-autosuggest"
      autoComplete="off"
      className="react-autosuggest__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select a partner"
      role="combobox"
      type="text"
      value="" />
    <div
      className="react-autosuggest__suggestions-container"
      id="react-autowhatever-partner-autosuggest" />
  </div>
</div>
`;

exports[`TagAutosuggest renders correctly 1`] = `
<div
  className="GenericAutosuggest">
  <div
    className="react-autosuggest__container">
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-tag-autosuggest"
      autoComplete="off"
      className="react-autosuggest__input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Select a tag"
      role="combobox"
      type="text"
      value="" />
    <div
      className="react-autosuggest__suggestions-container"
      id="react-autowhatever-tag-autosuggest" />
  </div>
</div>
`;
